# ChatApp

./: .gitignore  CMakeLists.txt  README.md
client/: main.c
docs/: architecture.md  project-structure.md  protocol.md  sequence.md
docs/diagrams/: architecture.mmd  sequence.mmd
server/: main.c
shared/: chat_cmd.c  chat_cmd.h  chat_frame.c  chat_frame.h  chat_utf8.c  chat_utf8.h
